Added some ugly styles

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
- <head>
- <title>Wishlist App</title>
- </head>
- <body>
- <%= yield %>
- </body>
+  <head>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/index.css" />
+    <title>Simple Wishlist</title>
+  </head>
+  <body>
+    <%= erb :"shared/header" %>
+    <%= yield %>
+  </body>
 </html>
