--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,11 +1,12 @@
-<h1>Login</h1>
-
 <form class="login-form" action="/login" method="post">
-  <input type="email" name="email" placeholder="Enter your email here">
-  <br/>
-  <input type="password" name="password" placeholder="Your password here">
-  <br/>
-  <input type="submit" value="Login">
+  <h1 class="logo">Login</h1>
+    <input class="input-field" type="email" name="email" id="email" placeholder="Enter your email here">
+    <input class="input-field" type="password" name="password" id="email" placeholder="Your password here">
+    <br>
+  <input type="submit" class="submit-btn" value="Login">
 </form>
-<hr/>
-<p>Don't have account? <a href="/signup">Sign up</a></p>
+
+<hr class="signup-hr" />
+<div class="signup-suggestion">
+  <p>Don't have account? <a href="/signup">Sign up</a></p>
+</div>
