--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,11 +1,8 @@
-<h1>Sign up</h1>
-
 <form class="signup-form" action="/signup" method="post">
-  <input type="text" name="user[name]" placeholder="Enter your name here">
-  <br/>
-  <input type="email" name="user[email]" placeholder="Enter your email here">
-  <br/>
-  <input type="password" name="user[password]" placeholder="Your password here">
-  <br/>
-  <input type="submit" value="Create account">
+  <h1 class="logo">Sign up</h1>
+  <input class="input-field" type="text" name="user[name]" placeholder="Enter your name here">
+  <input class="input-field" type="email" name="user[email]" placeholder="Enter your email here">
+  <input class="input-field" type="password" name="user[password]" placeholder="Your password here">
+  <br />
+  <input type="submit" class="submit-btn" value="Sign up">
 </form>
